--- a/task_2/.babelrc
+++ b/task_2/.babelrc
@@ -5,7 +5,7 @@
             "corejs" : 3,
             "useBuiltIns" : "usage",
             "debug" : true,
-            "modules" : false,
+            // "modules" : false,
             "targets" : {
                 "node": "current"
               }
